# task-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: setup.sh
src/task_tracker/: __init__.py  config.py  logger.py  server.py
src/task_tracker/api/: linear_client.py  timetracking_client.py  trackingtime_client.py
